--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,15 @@
   background-color: white;
   width: 25vw;
 }
+
+banker-hand, player-hand {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-image {
+  height: 100px;
+  padding: 5px;
+}
